--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 pcap       = "1.1.0"
 etherparse = "0.13.0"
 ctrlc      = "3.4.2"
-tmohash = { path = "../tmo_hash", version = "0.1.0"}
+nix        = "0.28.0"
+tmohash    = { path = "../tmo_hash", version = "0.1.0"}
