--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ etherparse = "0.13.0"
 ctrlc      = "3.4.2"
 nix        = "0.28.0"
 chrono     = "0.4.35"
+serde      = { version = "1.0", features = ["derive"] }
+bincode    = "1.3.3"
 tmohash    = { path = "../tmo_hash", version = "0.1.0"}
