--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 pcap       = "1.1.0"
 etherparse = "0.13.0"
 ctrlc      = "3.4.2"
-nix        = "0.28.0"
+# nix        = "0.28.0"
 chrono     = "0.4.35"
 serde      = { version = "1.0", features = ["derive"] }
 bincode    = "1.3.3"
