--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,27 @@ version = "0.1.0"
 authors = [ "LiChunhui" ]
 edition = "2021"
 
+[[bin]]
+name = "nsave"
+path = "src/main.rs"
+
+[[bin]]
+name = "nsave-cli"
+path = "src/bin/cli/main.rs"
+
+[lib]
+name = "libnsave"
+path = "src/lib.rs"
+
 [dependencies]
+# tmohash    = { path = "../tmo_hash", version = "0.1.0"}
+# tmohash = { git = "https://github.com/chunhuitrue/tmo_hash.git", branch = "master" }
+tmohash    = { git = "https://gitee.com/chunhui_true/tmo_hash.git", branch = "master" }
 pcap       = "1.1.0"
 etherparse = "0.13.0"
 ctrlc      = "3.4.2"
-# nix        = "0.28.0"
+# nix      = "0.28.0"
 chrono     = "0.4.35"
 serde      = { version = "1.0", features = ["derive"] }
 bincode    = "1.3.3"
-tmohash    = { path = "../tmo_hash", version = "0.1.0"}
+
