--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,8 @@ tmohash    = { git = "https://gitee.com/chunhui_true/tmo_hash.git", branch = "ma
 pcap       = "1.1.0"
 etherparse = "0.13.0"
 ctrlc      = "3.4.2"
-# nix      = "0.28.0"
 chrono     = "0.4.35"
 serde      = { version = "1.0", features = ["derive"] }
 bincode    = "1.3.3"
-
+clap       = "4.5.4"
+# nix      = "0.28.0"
