--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,4 @@ chrono     = "0.4.35"
 serde      = { version = "1.0", features = ["derive"] }
 bincode    = "1.3.3"
 clap       = "4.5.4"
-# nix      = "0.28.0"
+nix      = "0.28.0"
