--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,4 +28,5 @@ serde      = { version = "1.0", features = ["derive"] }
 bincode    = "1.3.3"
 clap       = "4.5.4"
 memmap     = "0.7.0"
+memmap2    = "0.9.4"
 nix        = "0.28.0"
