--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ bincode    = "1.3.3"
 clap       = "4.5.4"
 memmap2    = "0.9.4"
 libc       = "0.2"
+toml       = "0.8.16"
 
 [dev-dependencies]
 tempfile = "3.10.1"
