--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,16 @@
 [package]
-name    = "nsave"
-version = "0.1.0"
-authors = [ "LiChunhui" ]
-edition = "2021"
+name          = "nsave"
+version       = "0.1.0"
+edition       = "2021"
+description   = "capturing and saving packets"
+documentation = "https://docs.rs/nsave"
+keywords      = ["packet", "capture"]
+categories    = ["packet process", "network security"]
+homepage      = "https://github.com/chunhuitrue/nsave"
+repository    = "https://github.com/chunhuitrue/nsave"
+license       = "GPLv3"
+readme        = "README.md"
+authors       = ["李春辉"]
 
 [[bin]]
 name = "nsave"
