--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ keywords      = ["packet", "capture"]
 categories    = ["packet process", "network security"]
 homepage      = "https://github.com/chunhuitrue/nsave"
 repository    = "https://github.com/chunhuitrue/nsave"
-license       = "GPLv3"
+license       = "GPL-3.0-only"
 readme        = "README.md"
 authors       = ["李春辉"]
 
