--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition       = "2021"
 description   = "capturing and saving packets"
 documentation = "https://docs.rs/nsave"
 keywords      = ["packet", "capture"]
-categories    = ["packet process", "network security"]
+categories    = ["command-line-utilities"]
 homepage      = "https://github.com/chunhuitrue/nsave"
 repository    = "https://github.com/chunhuitrue/nsave"
 license       = "GPL-3.0-only"
